<resources>
    <string name="app_name">BasicRelativeLayout</string>
    <string name="lyla">lyla</string>
    <string name="me">me</string>
    <string name="natalie">natalie</string>
    <string name="jennie">jennie</string>
    <string name="omoju">omoju</string>
    <string name="amy">amy</string>
    <string name="ben">ben</string>
    <string name="kunal">kunal</string>
    <string name="kagure">kagure</string>
</resources>