<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/lyla_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/lyla"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/me_text_view"
        android:layout_alignParentBottom="true"
        android:text="@string/me"
        android:textSize="24sp"
        android:layout_toRightOf="@id/lyla_text_view"
        android:layout_toEndOf="@id/lyla_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/natalie_text_view"
        android:text="@string/natalie"
        android:textSize="24sp"
        android:layout_above="@id/lyla_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jennie_text_view"
        android:layout_alignParentBottom="true"
        android:text="@string/jennie"
        android:textSize="24sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/omoju_text_view"
        android:text="@string/omoju"
        android:textSize="24sp"
        android:layout_above="@id/jennie_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amy_text_view"
        android:text="@string/amy"
        android:textSize="24sp"
        android:layout_above="@id/omoju_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ben_text_view"
        android:text="@string/ben"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kunal_text_view"
        android:text="@string/kunal"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/ben_text_view"
        android:layout_toStartOf="@id/ben_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kagure_text_view"
        android:text="@string/kagure"
        android:textSize="24sp"
        android:layout_toRightOf="@id/ben_text_view"
        android:layout_toEndOf="@id/ben_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentTop="true"/>

</RelativeLayout>